--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".main.view.MainActivity"
             android:label="@string/app_name" >
@@ -19,8 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".main.view.SearchResultsActivity" >
+            android:name=".main.view.OverviewActivity">
+        </activity>
         <activity
-            android:name=".main.view.SearchResultsActivity">
+            android:name=".main.view.OverviewActivity"
+            android:label="@string/title_activity_overview" >
         </activity>
     </application>
 
